--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "stylelint-config-rational-order",
-  "version": "0.1.2",
-  "description": "Stylelint config that sorts related property declarations by grouping together following the order: Positioning, Box Model, Typography, Visual, Animation, Other.",
-  "author": "Constverum <constverum@gmail.com>",
+  "name": "stylelint-config-rational-declaration",
+  "version": "0.1.3",
+  "description": "Stylelint config that sorts related property declarations by grouping together following the order: Positioning, Structure, Grid, Dimension, Definition, Typography, Visual, Animation, Other.",
+  "author": "Jefferson William Machado <jeffersonwilliammachado@gmail.com>",
   "license": "Apache-2.0",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/constverum/stylelint-config-rational-order.git"
+    "url": "git+https://github.com/jefferson-william/stylelint-config-rational-declaration.git"
   },
   "bugs": {
-    "url": "https://github.com/constverum/stylelint-config-rational-order/issues"
+    "url": "https://github.com/jefferson-william/stylelint-config-rational-declaration/issues"
   },
   "scripts": {
     "lint": "node ./node_modules/eslint/bin/eslint.js .",
@@ -20,6 +20,7 @@
     "stylelint",
     "stylelint-config",
     "stylelint-order",
+    "stylelint-declaration",
     "stylelint-plugin",
     "properties-order",
     "css property order",
@@ -30,18 +31,18 @@
     "order"
   ],
   "dependencies": {
-    "stylelint": "^9.10.1",
-    "stylelint-order": "^2.2.1"
+    "stylelint": "^13.2.0",
+    "stylelint-order": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-prettier": "^3.0.1",
-    "jest": "^24.7.1",
-    "prettier": "^1.16.4"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.8.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1"
   },
-  "homepage": "https://github.com/constverum/stylelint-config-rational-order"
+  "homepage": "https://github.com/jefferson-william/stylelint-config-rational-declaration"
 }
